save some space on the homescreen

--- a/about/colophon/identity/index.html
+++ b/about/colophon/identity/index.html
@@ -18,22 +18,22 @@
 <hr>
 
 <h2 id="personal-flag">Personal Flag</h2>
-<img  src="/img/about/Flag.png" loading="lazy" alt="a square flag with grey on top, pink on the bottom and white circle in the middle" width="100%" height="100%">
+<img  src="/img/about/Flag.png" loading="lazy" alt="a square flag with grey on top, pink on the bottom and white circle in the middle">
 
 <p>The flag, which features as the favicon for d00k.net, serves as a cartographic representation of my aesthetic and philosophies. The design and colourscheme were chosen for their visual synergy, rather than having any distinct meaning.</p>
 
 <h2 id="pieces">Pieces</h2>
-<img  src="/img/about/pieces.svg" loading="lazy" alt="various abstract shapes on a canvas" width="100%" height="100%">
+<img  src="/img/about/pieces.svg" loading="lazy" alt="various abstract shapes on a canvas">
 
 <p>The central core to the visual identity of d00k.net, Pieces serve as an abstract yet meaningless method of communication to the viewer. In place of a logo or mascot, Pieces fill in the gaps of visual iconography on the site.</p>
 
 <h2 id="colourscheme">Colourscheme</h2>
-<img  src="/img/about/colourscheme.png" loading="lazy" alt="A set of colours from black to white" width="100%" height="100%">
+<img  src="/img/about/colourscheme.png" loading="lazy" alt="A set of colours from black to white">
 
 <p>This site follows a strict colourscheme for content. With black and white being for text and important elements, set tones of grey taken in steps of 5 on the luminance Value scale in HSV. There are some exceptions to be found, for example the hex value #ffaaaa seen in the flag is used in the menu icon as well as the 404 page. A lighter dark tone is used for the backdrop of <!-- raw HTML omitted --> tag in order to lessen eye strain.</p>
 
 <h2 id="portrait">Portrait</h2>
-<img  src="/img/about/profilepic.jpg" loading="lazy" alt="an abstract image of a person looking upwards" width="100%" height="100%">
+<img  src="/img/about/profilepic.jpg" loading="lazy" alt="an abstract image of a person looking upwards">
 
 <p>The self portrait used for profile pictures on websites. Came from an art project where I combined the same 2 images 100 times with different blending layers to create different results. Also seen on the about page.</p>
 
