--- a/design/adwaitapod/index.html
+++ b/design/adwaitapod/index.html
@@ -17,7 +17,7 @@
 <div class="title"><h1 id="top">adwaitapod</h1><hr></div>
 <p>Originally created in 2022, adwaitapod is a modern and feature-rich Ui theme for the iPod classic (5th generation onwards). Built using Rockbox, the theme is designed using the Gnome foundation&rsquo;s <a href="https://en.wikipedia.org/wiki/Adwaita_%28design_language%29" target="_blank" rel="noopener">Adwaita</a> design language. Adwaitapod is built with an aim to create a pleasing, predictable user experience, alongside customisation capabilities that allows users to tweak the theme to their taste.</p>
 
-<img  src="/img/design/adwaitapod.gif" loading="lazy" alt="A gif showing the various screens of adwaitapod" width="100%" height="100%">
+<img  src="/img/design/adwaitapod.gif" loading="lazy" alt="A gif showing the various screens of adwaitapod">
 
 <p>Adwaitapod is currently the most advanced use of Rockbox&rsquo;s theming system, with many unique features like a redesigned Recording screen, custom user-friendly selection menus, and the first fully-custom quick settings screen.</p>
 <p>The theme also features the best optimisations of images for Rockbox themes, both with some of the best image compression possible, as well as optimisations in how images are rendered.</p>
