--- a/design/beryl_logo/index.html
+++ b/design/beryl_logo/index.html
@@ -20,7 +20,7 @@
 <hr>
 
 <h2 id="beryl-visual-identity">Beryl Visual Identity</h2>
-<img  src="/img/design/Visual_Identity_Guide.png" loading="lazy" alt="A small, black, white and orange bee carrying a leaf into it&#39;s nest in a hole" width="100%" height="100%">
+<img  src="/img/design/Visual_Identity_Guide.png" loading="lazy" alt="A small, black, white and orange bee carrying a leaf into it&#39;s nest in a hole">
 
 <div class="listbox box"><h2>Links</h2><hr><ul>
 <li><a class="linklist" href="https://fosstodon.org/@Beryl"  target="_blank" rel="noreferrer" >⬩&nbsp; Follow Beryl on the Fediverse</a></li>
