--- a/design/famicase/index.html
+++ b/design/famicase/index.html
@@ -19,7 +19,7 @@
 <hr>
 
 <h2 id="2021-entry---become">2021 Entry - Become</h2>
-<img  src="/img/design/famicase_1.jpg" loading="lazy" alt="a circle of small, pixel animals surround the player with the title &#39;Become&#39; beside them" width="100%" height="100%">
+<img  src="/img/design/famicase_1.jpg" loading="lazy" alt="a circle of small, pixel animals surround the player with the title &#39;Become&#39; beside them">
 
 <p>The 2021 Famicase Exhibition took place between April 29th and May 31st.</p>
 <hr>
