--- a/design/rebble_weather/index.html
+++ b/design/rebble_weather/index.html
@@ -23,7 +23,7 @@
 <hr>
 
 <h2 id="rain-snow-and-clouds">Rain, Snow and Clouds</h2>
-<img  src="/img/design/rebbleweather02.svg" loading="lazy" alt="Different kinds of weather icons on a purple background. Example, snow, rain etc." width="100%" height="100%">
+<img  src="/img/design/rebbleweather02.svg" loading="lazy" alt="Different kinds of weather icons on a purple background. Example, snow, rain etc.">
 
 <p>The weather icons with clouds proved challenging at times, being limited to 3 angles (flat, 1:1 and 1:2) meant the shape was very limited in terms of originality and looking good. Eventually I took the cloud icon Lavender had made for the project, and jazzed it up making it more fluffy and rounder overall. There were many different prototypes designed before I landed on the final shape.</p>
 
@@ -32,7 +32,7 @@
 
 
 <h2 id="sunny-day">Sunny Day</h2>
-<img  src="/img/design/RebbleIconsImg.png" loading="lazy" alt="A cartoonish sun with rays coming off it on a yellow background" width="100%" height="100%">
+<img  src="/img/design/RebbleIconsImg.png" loading="lazy" alt="A cartoonish sun with rays coming off it on a yellow background">
 
 <p>Witht the sun icon, I tried to build upon Heyday&rsquo;s design by making it more rounded and less sharp overall. The rays on the original are far nicer in my opinion, however I feel the rays on my design also fit well with the whole concept. The shape of the central ball took several prototypes trying different ideas to pick the right one. On real hardware, the ball looks more square with rounded corners.</p>
 
