--- a/design/streetwalker/index.html
+++ b/design/streetwalker/index.html
@@ -18,7 +18,7 @@
 <p>Streetwalker was a project started in 2016 in an attempt to learn lua and the pico-8 virtual console. After experiencing <a href="https://www.lexaloffle.com/bbs/?pid=15930#p" target="_blank" rel="noopener">Graphics Exercise</a> by Mason Lindroth, I was inspired to create my own walking sim with the goal of filling the system&rsquo;s 1024x512 pixel map space.</p>
 <hr>
 
-<img  src="/img/design/streetwalker_3.png" loading="lazy" alt="a large map of the game&#39;s city" width="100%" height="100%">
+<img  src="/img/design/streetwalker_3.png" loading="lazy" alt="a large map of the game&#39;s city">
 
 <p>The game&rsquo;s design takes heavy inspiration from digital maps as well as brutalist architecture. Without any discernable differences from one place to the next, players are forced to wander and explore the world like they would with a new city. There are no gameplay objectives, however items are scattered randomly throughout the world. Attention was put into the physicality of the game&rsquo;s world, with things like the character darkening when in shadows, large usable bridges that can be walked on and under as well as steps being slower to walk up and down.</p>
 <div class="listbox box"><h2>Links</h2><hr><ul>
