--- a/design/timetwistpop/index.html
+++ b/design/timetwistpop/index.html
@@ -20,10 +20,10 @@
 <hr>
 
 <h2 id="the-themes">The Themes</h2>
-<img  src="/img/design/timetwistpop01.jpg" loading="lazy" alt="A poster of every theme option, with their colour and name" width="100%" height="100%">
+<img  src="/img/design/timetwistpop01.jpg" loading="lazy" alt="A poster of every theme option, with their colour and name">
 
 
-<img  src="/img/design/timetwistpop03.jpg" loading="lazy" alt="A poster of every pride theme option, with their colour and name" width="100%" height="100%">
+<img  src="/img/design/timetwistpop03.jpg" loading="lazy" alt="A poster of every pride theme option, with their colour and name">
 
 <p>The 24 themes each have their own feel and identity. Silver Shadow, Slate Shadow, Rose Quartz, Sailor Blue, Mint Twist, Strawberry Twist, Citrus Twist, Dragon Blue, Sorcerer Red and Purple Punch are the first series. There is also a second series of 14 Pride Flags. Background colours are dithered to create the illusion of a perfect blend, creating the watchface&rsquo;s unique identity.</p>
 <hr>
