--- a/design/tindra_grove/index.html
+++ b/design/tindra_grove/index.html
@@ -19,7 +19,7 @@
 <hr>
 
 <h2 id="logo-visual-guide">Logo Visual Guide</h2>
-<img  src="/img/design/Tindra_VIG.png" loading="lazy" alt="Visual Identity Guide for the client" width="100%" height="100%">
+<img  src="/img/design/Tindra_VIG.png" loading="lazy" alt="Visual Identity Guide for the client">
 
 
 <nav><a class="prev navbut" href="/design/">← Back to  Design Portfolio </a>
