--- a/photos/experiments/light/index.html
+++ b/photos/experiments/light/index.html
@@ -18,16 +18,16 @@
 <p>Different experiments manipulating or utilising light.</p>
 <hr>
 
-<img  src="/img/photos/light/light01.jpg" loading="lazy" alt="A portrait of a girl with light on half her face, to the side." width="100%" height="100%">
+<img  src="/img/photos/light/light01.jpg" loading="lazy" alt="A portrait of a girl with light on half her face, to the side.">
 
 
-<img  src="/img/photos/light/light02.jpg" loading="lazy" alt="A portrait of a girl with light on half her face, straight on." width="100%" height="100%">
+<img  src="/img/photos/light/light02.jpg" loading="lazy" alt="A portrait of a girl with light on half her face, straight on.">
 
 
-<img  src="/img/photos/light/light04.jpg" loading="lazy" alt="waves of light drawn above cinema seats." width="100%" height="100%">
+<img  src="/img/photos/light/light04.jpg" loading="lazy" alt="waves of light drawn above cinema seats.">
 
 
-<img  src="/img/photos/light/light05.jpg" loading="lazy" alt="Various shapes of light drawn above cinema seats." width="100%" height="100%">
+<img  src="/img/photos/light/light05.jpg" loading="lazy" alt="Various shapes of light drawn above cinema seats.">
 
 
 <nav><a class="prev navbut" href="/photos/#experiments">← Back to  Photo Gallery </a>
