--- a/photos/experiments/lowres/index.html
+++ b/photos/experiments/lowres/index.html
@@ -18,16 +18,16 @@
 <p>Low resolution photos taken on a Nokia C3 phone, using the 1MP Resolution setting. Mixture of Trichrome and regular photos.</p>
 <hr>
 
-<img  src="/img/photos/lowres/lowres02.jpg" loading="lazy" alt="pale, pink cherry blossoms." width="100%" height="100%">
+<img  src="/img/photos/lowres/lowres02.jpg" loading="lazy" alt="pale, pink cherry blossoms.">
 
 
-<img  src="/img/photos/lowres/lowres03.jpg" loading="lazy" alt="Like bursting on pale daffodils." width="100%" height="100%">
+<img  src="/img/photos/lowres/lowres03.jpg" loading="lazy" alt="Like bursting on pale daffodils.">
 
 
-<img  src="/img/photos/lowres/lowres04.jpg" loading="lazy" alt="A waterdrop reflecting it&#39;s backdrop upside down." width="100%" height="100%">
+<img  src="/img/photos/lowres/lowres04.jpg" loading="lazy" alt="A waterdrop reflecting it&#39;s backdrop upside down.">
 
 
-<img  src="/img/photos/lowres/lowres05.jpg" loading="lazy" alt="A mossy branch." width="100%" height="100%">
+<img  src="/img/photos/lowres/lowres05.jpg" loading="lazy" alt="A mossy branch.">
 
 
 <nav><a class="prev navbut" href="/photos/#experiments">← Back to  Photo Gallery </a>
