--- a/photos/experiments/selfportraiture/index.html
+++ b/photos/experiments/selfportraiture/index.html
@@ -18,22 +18,22 @@
 <p>Series of self portrait photographs taken for a piece on &lsquo;The Portrait of Dorian Gray&rsquo;. Utilising various manipulations of light and exposure.</p>
 <hr>
 
-<img  src="/img/photos/selfportraiture/selfportraiture02.jpg" loading="lazy" alt="A yellow portrait of a person, morphed with several different positions of the head" width="100%" height="100%">
+<img  src="/img/photos/selfportraiture/selfportraiture02.jpg" loading="lazy" alt="A yellow portrait of a person, morphed with several different positions of the head">
 
 
-<img  src="/img/photos/selfportraiture/selfportraiture03.jpg" loading="lazy" alt="An orange portrait of a person, morphed with several different positions of the head" width="100%" height="100%">
+<img  src="/img/photos/selfportraiture/selfportraiture03.jpg" loading="lazy" alt="An orange portrait of a person, morphed with several different positions of the head">
 
 
-<img  src="/img/photos/selfportraiture/selfportraiture04.jpg" loading="lazy" alt="A portrait of a person, morphed with several different positions of the head" width="100%" height="100%">
+<img  src="/img/photos/selfportraiture/selfportraiture04.jpg" loading="lazy" alt="A portrait of a person, morphed with several different positions of the head">
 
 
-<img  src="/img/photos/selfportraiture/selfportraiture05.jpg" loading="lazy" alt="A portrait of a person, using a diffraction filter that splits the images many times in a creepy fashion" width="100%" height="100%">
+<img  src="/img/photos/selfportraiture/selfportraiture05.jpg" loading="lazy" alt="A portrait of a person, using a diffraction filter that splits the images many times in a creepy fashion">
 
 
-<img  src="/img/photos/selfportraiture/selfportraiture06.jpg" loading="lazy" alt="A portrait of evan, using a diffraction filter that splits the images many times in a creepy fashion." width="100%" height="100%">
+<img  src="/img/photos/selfportraiture/selfportraiture06.jpg" loading="lazy" alt="A portrait of evan, using a diffraction filter that splits the images many times in a creepy fashion.">
 
 
-<img  src="/img/photos/selfportraiture/selfportraiture07.jpg" loading="lazy" alt="A hard-boiled portrait of a person with diffracted images." width="100%" height="100%">
+<img  src="/img/photos/selfportraiture/selfportraiture07.jpg" loading="lazy" alt="A hard-boiled portrait of a person with diffracted images.">
 
 
 <nav><a class="prev navbut" href="/photos/#experiments">← Back to  Photo Gallery </a>
