--- a/photos/places/loughderg/index.html
+++ b/photos/places/loughderg/index.html
@@ -19,19 +19,19 @@
 <hr>
 
 <h2 id="photos-around-the-lough">Photos around the Lough</h2>
-<img  src="/img/photos/places/loughderg02.jpg" loading="lazy" alt="Dromineer Marina with castle backdrop" width="100%" height="100%">
+<img  src="/img/photos/places/loughderg02.jpg" loading="lazy" alt="Dromineer Marina with castle backdrop">
 
 
-<img  src="/img/photos/places/loughderg03.jpg" loading="lazy" alt="Dromineer Castle 01" width="100%" height="100%">
+<img  src="/img/photos/places/loughderg03.jpg" loading="lazy" alt="Dromineer Castle 01">
 
 
-<img  src="/img/photos/places/loughderg04.jpg" loading="lazy" alt="Dromineer Castle 02" width="100%" height="100%">
+<img  src="/img/photos/places/loughderg04.jpg" loading="lazy" alt="Dromineer Castle 02">
 
 
-<img  src="/img/photos/places/loughderg05.jpg" loading="lazy" alt="Thatched Cottage" width="100%" height="100%">
+<img  src="/img/photos/places/loughderg05.jpg" loading="lazy" alt="Thatched Cottage">
 
 
-<img  src="/img/photos/places/loughderg06.jpg" loading="lazy" alt="Lough Derg" width="100%" height="100%">
+<img  src="/img/photos/places/loughderg06.jpg" loading="lazy" alt="Lough Derg">
 
 
 <nav><a class="prev navbut" href="/photos/#places">← Back to  Photo Gallery </a>
