--- a/photos/places/westport/index.html
+++ b/photos/places/westport/index.html
@@ -19,28 +19,28 @@
 <hr>
 
 <h2 id="photos">Photos</h2>
-<img  src="/img/photos/places/westport01.jpg" loading="lazy" alt="A boat in the bay&#39;s dock" width="100%" height="100%">
+<img  src="/img/photos/places/westport01.jpg" loading="lazy" alt="A boat in the bay&#39;s dock">
 
 
-<img  src="/img/photos/places/westport02.jpg" loading="lazy" alt="lobster nets" width="100%" height="100%">
+<img  src="/img/photos/places/westport02.jpg" loading="lazy" alt="lobster nets">
 
 
-<img  src="/img/photos/places/westport03.jpg" loading="lazy" alt="A marshy kind of place beside a beach" width="100%" height="100%">
+<img  src="/img/photos/places/westport03.jpg" loading="lazy" alt="A marshy kind of place beside a beach">
 
 
-<img  src="/img/photos/places/westport04.jpg" loading="lazy" alt="a quaint, long wooden bridge over the marshy area" width="100%" height="100%">
+<img  src="/img/photos/places/westport04.jpg" loading="lazy" alt="a quaint, long wooden bridge over the marshy area">
 
 
-<img  src="/img/photos/places/westport05.jpg" loading="lazy" alt="Westport House Bridge" width="100%" height="100%">
+<img  src="/img/photos/places/westport05.jpg" loading="lazy" alt="Westport House Bridge">
 
 
-<img  src="/img/photos/places/westport07.jpg" loading="lazy" alt="Entrance into a wood trail in westport house" width="100%" height="100%">
+<img  src="/img/photos/places/westport07.jpg" loading="lazy" alt="Entrance into a wood trail in westport house">
 
 
-<img  src="/img/photos/places/westport08.jpg" loading="lazy" alt="A striking, red bridge over a stream" width="100%" height="100%">
+<img  src="/img/photos/places/westport08.jpg" loading="lazy" alt="A striking, red bridge over a stream">
 
 
-<img  src="/img/photos/places/westport09.jpg" loading="lazy" alt="A striking, red bridge over a stream" width="100%" height="100%">
+<img  src="/img/photos/places/westport09.jpg" loading="lazy" alt="A striking, red bridge over a stream">
 
 
 <nav><a class="prev navbut" href="/photos/#places">← Back to  Photo Gallery </a>
