--- a/wiki/ecovillage/index.html
+++ b/wiki/ecovillage/index.html
@@ -20,12 +20,12 @@ a large <a href="https://cloughjordancommunityfarm.ie/" target="_blank" rel="noo
 <hr>
 
 <h2 id="village-characteristics">Village Characteristics</h2>
-<img  src="/img/wiki/ecovillage04.jpg" loading="lazy" alt="Apartments behind a large town square" width="100%" height="100%">
+<img  src="/img/wiki/ecovillage04.jpg" loading="lazy" alt="Apartments behind a large town square">
 
 <p>Cloughjordan Ecovillage has a large variety in housing, near the village entrance are a number of spacey apartment blocks surrounding the town square. As you go further in, there are mostly individual plots with houses of much variety in construction, most following an eco philosophy. There are many walking trails to houses off the main paths and roads. Trees encase these trails beautifully (see the images below for an example). Overall, nature is very much in control around these houses. There are no managed lawns or unfamiliar plants to be seen.</p>
 
 <h2 id="energy-and-waste-management">Energy and Waste Management</h2>
-<img  src="/img/wiki/ecovillage01.jpg" loading="lazy" alt="A large solar panel array" width="100%" height="100%">
+<img  src="/img/wiki/ecovillage01.jpg" loading="lazy" alt="A large solar panel array">
 
 <p>The village has an installation of a 500m² solar panel array, and every building appears to have their own installations of some kind of panel. In terms of waste management, the village is dependent on the local council water treatment facilities. This dependency however has stopped the village from expanding, the facilities being at max capacity means they must either find their own solutions or work with the government to improve the system already in place, which they appear to be doing.</p>
 
