--- a/wiki/linux/imagemagick/index.html
+++ b/wiki/linux/imagemagick/index.html
@@ -56,7 +56,7 @@ or
 
 
 <h3 id="combining-images">Combining Images</h3>
-<img  src="/img/wiki/linux/imagemagick02.jpg" loading="lazy" alt="2 images of bees combined horizontally" width="100%" height="100%">
+<img  src="/img/wiki/linux/imagemagick02.jpg" loading="lazy" alt="2 images of bees combined horizontally">
 
 <p>This is a pretty handy command I just found that lets you combine images side by side! Wether they combine vertically or horizontally depends on the prefix the command, <strong>+</strong> for horizontal and <strong>-</strong> for vertical. This command even lets you use images with different file formats to each other!</p>
 
