--- a/wiki/origami-designs/index.html
+++ b/wiki/origami-designs/index.html
@@ -17,12 +17,12 @@
 <div class="title"><h1 id="top">Origami Designs</h1><hr></div>
 
 <h2 id="origami-modular-festive-tree">Origami Modular Festive Tree</h2>
-<img  src="/img/wiki/origami_designs_2.jpg" loading="lazy" alt="A green origami tree on a table" width="100%" height="100%">
+<img  src="/img/wiki/origami_designs_2.jpg" loading="lazy" alt="A green origami tree on a table">
 
 <p>The Origami festive tree is a modular origami tree with little slots in the leaves to put whatever you want! It was designed as a modular, flat-packable festive tree that could be practical, allowing you to put different decorations or items in it. The design still needs some tweaking before I&rsquo;m happy with posting instructions, I&rsquo;ll probably get around to it soon.</p>
 
 <h2 id="origami-cat">Origami Cat</h2>
-<img  src="/img/wiki/origami_designs_1.jpg" loading="lazy" alt="An origami cat face" width="100%" height="100%">
+<img  src="/img/wiki/origami_designs_1.jpg" loading="lazy" alt="An origami cat face">
 
 <p>This is my take on the origami cat design, there isn&rsquo;t too much to say about it, the design itself isn&rsquo;t all too complicated. Some parts like forming the face take a couple of light, unmarked folds on the sides. It&rsquo;s so cute.</p>
 <hr>
