--- a/design/virtual_gallery/index.html
+++ b/design/virtual_gallery/index.html
@@ -19,7 +19,7 @@
 <hr>
 
 <h2 id="the-exhibition">The Exhibition</h2>
-<img  src="/img/design/virtual_gallery_3.jpg" loading="lazy" alt="promotional poster from the exhibition title &#39;Young Artists of Wexford&#39;" width="100%" height="100%">
+<img  src="/img/design/virtual_gallery_3.jpg" loading="lazy" alt="promotional poster from the exhibition title &#39;Young Artists of Wexford&#39;">
 
 <p>It took several months to build a basic site from scratch using HTML and CSS, largely due to my inexperience however I learned a lot. During this time the scope changed drastically, deciding to open it up to other young artists locally who wanted to share their work. In the end, 15 artists signed up to exhibit. Despite my inability to run proper social media for it, the exhibition was quite successful. While a follow-up photography competition was planned, circumstances preventing me from working on the site. I hope to pick the project back up from scratch in the future, however.</p>
 <hr>
