--- a/wiki/index.html
+++ b/wiki/index.html
@@ -41,6 +41,7 @@
 <div class="listbox box"><h2>Advanced Guides &amp; Information</h2><hr><ul>
 <li><a class="linklist" href="rockbox_advanced/font_combining" >• Making custom Rockbox Fonts</a></li>
 <li><a class="linklist" href="rockbox_advanced/rockbox_image_optimisation" >• Getting the most out of images</a></li>
+<li><a class="linklist" href="rockbox_advanced/missing_features" >• Missing Features of the Theming Engine</a></li>
 </ul></div>
 <hr>
 
