--- a/rockbox_test/devices/test/index.html
+++ b/rockbox_test/devices/test/index.html
@@ -9,7 +9,7 @@
 	 
 	
 	<style type="text/css" media="all"></style>
-<link rel="stylesheet" type="text/css" href="/style/style.css">
+<link rel="stylesheet" type="text/css" href="../../style/style.css">
 <style type="text/css" media="all"></style>
 
 
@@ -115,8 +115,8 @@ Donate
 <td bgcolor="#6887bb" width="100%"><div class="foswikiMain">
 <div class="wikihead">
 	<form name="main" action="https://www.rockbox.org/realwiki/bin/view/Main/ArticlesAboutRockbox"> <span style="float:right"> <a href="WebSearch.html">Search</a> | Go  <input type="text" name="topic" size="10"> </span></form>
-	<a href="/">Wiki</a>
-		 &gt; <a href="/">Main</a>
+	<a href="../..">Wiki</a>
+		 &gt; <a href="../..">Main</a>
 		 &gt; 
 		 <font size="+1"><b>Test Title</b>   </font>
  </div>
