--- a/rockbox_test/index.html
+++ b/rockbox_test/index.html
@@ -10,7 +10,7 @@
 	 
 	
 	<style type="text/css" media="all"></style>
-<link href="/style/style.css" type="text/css" rel="stylesheet">
+<link href="style/style.css" type="text/css" rel="stylesheet">
 <style type="text/css" media="all"></style>
 
 
@@ -116,8 +116,8 @@ Donate
 <td bgcolor="#6887bb" width="100%"><div class="foswikiMain">
 <div class="wikihead">
 	<form name="main" action="https://www.rockbox.org/realwiki/bin/view/Main/WebHome"> <span style="float:right"> <a href="WebSearch.html">Search</a> | Go  <input type="text" name="topic" size="10"> </span></form>
-	<a href="..">Wiki</a>
-		 &gt; <a href="..">Main</a>
+	<a href="">Wiki</a>
+		 &gt; <a href="">Main</a>
 		 &gt; 
 		 <font size="+1"><b>WebHome</b>   </font>
  </div>
