add rockbox site test

--- a/rockbox_test/index.html
+++ b/rockbox_test/index.html
@@ -131,11 +131,11 @@ Donate
 
 <ul>
 
-<li><a href="/test/second_test_post/" target="_top">Second Test Post
+<li><a href="test/second_test_post/" target="_top">Second Test Post
 </a>
 </li>
 
-<li><a href="/devices/test/" target="_top">Test Title
+<li><a href="devices/test/" target="_top">Test Title
 </a>
 </li>
 
