updates to layout

--- a/about/colophon/index.html
+++ b/about/colophon/index.html
@@ -35,7 +35,7 @@
 <div class="listbox box"><h2>Further Reading</h2><hr><ul>
 <li><a class="linklist" href="identity" >• Identity</a></li>
 <li><a class="linklist" href="testpage" >• d00k.net Test Page</a></li>
-<li><a class="linklist" href="testpage" >• Performance and Compliance Stats</a></li>
+<li><a class="linklist" href="site_stats" >• Performance and Compliance Stats</a></li>
 </ul></div>
 
 <nav><a class="prev navbut" href="/about/">← Back to  About </a>
