--- a/about/colophon/site_stats/index.html
+++ b/about/colophon/site_stats/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html><html lang="en"><head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1"><link href="/css/style.css" rel="stylesheet"><link rel="shortcut icon" type="image/png" href="/img/assets/favicon.png">
-<meta property="og:image" content="/img/" />
 
-<title> Home  • d00k.net</title></head>
+<meta property="og:description" 
+  content="The site&#39;s performance and compliance metrics"/>
+<title> Performance and Compliance Stats  • d00k.net</title></head>
 <body><header><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
@@ -12,15 +13,12 @@
 <li><a href="/about/">About</a></li>
 </ul></div></nav></header>
 <main class="layout">
-<img src="/img/assets/homeimage.png" alt="shadows on a dimly lit wall" width="720px" height="540px" style="border-radius:20px;margin-top:24px"> 
-<div class="text borderless box">
 
-<div><h2 id="dooknet-ˈdʊk">dook.net (/ˈdʊk/)</h2><p>Personal Website, Portfolio, Wiki, Photo Gallery, Memex and Blog</div>
-</div>
+<div class="title"><h1 id="top">Performance and Compliance Stats</h1><hr></div>
 
-<div class="listbox box"><h2>Latest from the Blog</h2><p>Check out some of the latest posts from the blog.</p><hr><ul>
-<li><a class="linklist" href="/blog/endless_web_my_history/">∙ On the Endless Web: My Relationship with the Internet</a></li><li><a class="linklist" href="/blog/redesigning_again/">∙ Re-designing my site, one more time</a></li><li><a class="linklist" href="/blog/one-year-of-dook-net/">∙ Celebrating a Year of d00k.net</a></li> 
-</ul></div>
+<nav><a class="prev navbut" href="/about/colophon/">← Back to  Colophon </a>
+
+</nav>
 </main>
 <footer>
 <div class="layout">
@@ -29,7 +27,7 @@
 <a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed" width="28"height="28"></a>
 <a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git" width="25"height="28"></a>
 <hr>
-<div style="margin:20px 0 8px">Published: <strong>August 2023</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
+<div style="margin:20px 0 8px">Published: <strong>October 2023</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
 <img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64" width="553">
 </footer>
