--- a/wiki/rockbox_theming/index.html
+++ b/wiki/rockbox_theming/index.html
@@ -17,7 +17,7 @@
 <p>Learn how to make your own iPod themes from scratch, using just a text editor. No experience of any sort required, all you&rsquo;ll need is an iPod or similar device running Rockbox and a computer to create the theme on. By the end you&rsquo;ll not only have a working theme, but also the skills to go and design your own themes.</p>
 <hr>
 
-<h2 id="chapters">Chapters</h2><a href="" class="clickbox box " >
+<h2 id="chapters">Chapters</h2><a href="introduction" class="clickbox box " >
 
 
 
