--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 
 
 <title> 404 Page not found  • d00k.net</title></head>
-<body><div style="min-height:100%;margin-bottom:-94px">
+<body>
 <header><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
@@ -16,7 +16,6 @@
 <img src="/img/assets/404.svg" alt="shadows on a dimly lit wall" width="720" > 
 <p style="margin:auto;width:fit-content">Sorry, this page doesn't exist.</p>
 </main>
-<div style="height:100px"></div></div>
 <footer>
 <div class="layout">
 <a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28"height="28"></a>
