--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class="listbox box"><h2>Latest from the Blog</h2><p>Check out some of the latest posts from the blog.</p><hr><ul>
-<li><a class="linklist" href="/blog/endless_web_my_history/">∙ On the Endless Web: My Relationship with the Internet</a></li><li><a class="linklist" href="/blog/redesigning_again/">∙ Re-designing my site, one more time</a></li><li><a class="linklist" href="/blog/one-year-of-dook-net/">∙ Celebrating a Year of d00k.net</a></li> 
+<li><a class="linklist" href="/blog/redesigning_again/">∙ Re-designing my site, one more time</a></li><li><a class="linklist" href="/blog/one-year-of-dook-net/">∙ Celebrating a Year of d00k.net</a></li><li><a class="linklist" href="/blog/inside_themify/">∙ A Look Inside Themify</a></li> 
 </ul></div>
 </main>
 <footer>
