--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 
 <title> 404 Page not found  • d00k.net</title></head>
 <body>
-<header><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="100%" height="100%"></a></div><div class="menu"><ul role="list">
+<header><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
@@ -14,7 +14,7 @@
 </ul></div></nav></header>
 <main class="layout">
 <img src="/img/assets/404.svg" alt="shadows on a dimly lit wall" width="720" > 
-<p style="margin:auto;width:fit-content">Sorry, this page doesn't exist.</p>
+<p style="text-align:center">Sorry, this page doesn't exist.</p>
 </main>
 <footer>
 <div class="layout">
