--- a/about/journal/2022-11-25/index.html
+++ b/about/journal/2022-11-25/index.html
@@ -4,15 +4,15 @@
 <meta property="og:description" 
   content="Updates from around the site and what I&#39;ve worked on this month"/>
 <title> November Update  • d00k.net</title></head>
-<body><header><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
+<body><div class="header"><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
 <li><a href="/design/">Design</a></li>
 <li><a href="/blog/">Blog</a></li>   
 <li><a href="/about/">About</a></li>
-</ul></div></nav></header>
-<main class="layout">
+</ul></div></nav></div>
+<div class="main layout">
 
 <div class="title"><h1 id="top">November Update</h1><hr></div>
 <p>What a wild month! I started the month updating a finishing off my <a href="https://d00k.net/projects/adwaitapod/" target="_blank" rel="noopener">adwaitapod</a> theme for rockbox. I also spent the past 3 weeks learning to program in C, building up to the Rebble Hackathon last weekend where I put together my watchface design, <a href="https://d00k.net/projects/pebble/timetwistpop/" target="_blank" rel="noopener">Time Twist Pop</a> and released it! It was incredibly frustrating at times, since I really have very little experience programming. However, by the end of the weekend I was getting into the zone and pumping out some really good stuff and was having a blast! Really looking forward to making more with C in the future!</p>
@@ -20,8 +20,8 @@
 <nav><a class="prev navbut" href="/about/journal/">← Back to  Dook&#39;s Journal </a>
 
 </nav>
-</main>
-<footer>
+</div>
+<div class="footer">
 <div class="layout">
 <a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28"height="28"></a>
 <a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30"height="27"></a>
@@ -31,5 +31,5 @@
 <div style="margin:20px 0 8px">Published: <strong>November 2022</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
 <img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64" width="553">
-</footer>
+</div>
 </body>
