--- a/about/journal/2023-01-31/index.html
+++ b/about/journal/2023-01-31/index.html
@@ -4,15 +4,15 @@
 <meta property="og:description" 
   content="Updates from around the site and what I&#39;ve worked on this month"/>
 <title> January Update  • d00k.net</title></head>
-<body><header><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
+<body><div class="header"><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
 <li><a href="/design/">Design</a></li>
 <li><a href="/blog/">Blog</a></li>   
 <li><a href="/about/">About</a></li>
-</ul></div></nav></header>
-<main class="layout">
+</ul></div></nav></div>
+<div class="main layout">
 
 <div class="title"><h1 id="top">January Update</h1><hr></div>
 <p>Happy new year! I&rsquo;ve decided this year to use my short journal as a more detailed monthly record. This month was largely focused on my college application. I&rsquo;m attempting to return to college in September, switching institutions as I do so to be closer to home. This requires a whole new application, portfolio etc which I spent most of this month handling. In my off time I put a decent amount of work into my website, solidifying parts of the website that have been disjointed up until now. I also started a <a href="/knowledge/linux">Linux Wiki</a> of various cheatsheets I&rsquo;ve written over the past year. These were received quite well, and I hope this knowledge will help others learn too. Lastly, this month I was shortlisted and exhibited in The Photographer&rsquo;s Gallery&rsquo;s <a href="https://unthinking.photography/commissions/small-file-photo-festival" target="_blank" rel="noopener">Small File Photo Festival</a>. I&rsquo;m very proud of this exhibition, combining two of my interests: Photography and Image Compression. I&rsquo;m hoping this year I&rsquo;ll be able to move about more and take photos again.</p>
@@ -20,8 +20,8 @@
 <nav><a class="prev navbut" href="/about/journal/">← Back to  Dook&#39;s Journal </a>
 
 </nav>
-</main>
-<footer>
+</div>
+<div class="footer">
 <div class="layout">
 <a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28"height="28"></a>
 <a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30"height="27"></a>
@@ -31,5 +31,5 @@
 <div style="margin:20px 0 8px">Published: <strong>January 2023</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
 <img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64" width="553">
-</footer>
+</div>
 </body>
