--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <meta property="og:image" content="/img/" />
 
 <title> Home  • d00k.net</title></head>
-<body><header><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
+<body><div class="header"><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
 <li><a href="/design/">Design</a></li>
 <li><a href="/blog/">Blog</a></li>   
 <li><a href="/about/">About</a></li>
-</ul></div></nav></header>
-<main class="layout">
+</ul></div></nav></div>
+<div class="main layout">
 <img src="/img/assets/homeimage.png" alt="shadows on a dimly lit wall" width="720px" height="540px" style="border-radius:20px;margin-top:24px"> 
 <div class="text borderless box">
 
@@ -21,8 +21,8 @@
 <div class="listbox box"><h2>Latest from the Blog</h2><p>Check out some of the latest posts from the blog.</p><hr><ul>
 <li><a class="linklist" href="/blog/redesigning_again/">∙ Re-designing my site, one more time</a></li><li><a class="linklist" href="/blog/one-year-of-dook-net/">∙ Celebrating a Year of d00k.net</a></li><li><a class="linklist" href="/blog/inside_themify/">∙ A Look Inside Themify</a></li> 
 </ul></div>
-</main>
-<footer>
+</div>
+<div class="footer">
 <div class="layout">
 <a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28"height="28"></a>
 <a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30"height="27"></a>
@@ -32,5 +32,5 @@
 <div style="margin:20px 0 8px">Published: <strong>August 2023</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
 <img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64" width="553">
-</footer>
+</div>
 </body>
