--- a/wiki/rockbox_advanced/rockbox_image_optimisation/index.html
+++ b/wiki/rockbox_advanced/rockbox_image_optimisation/index.html
@@ -4,15 +4,15 @@
 <meta property="og:description" 
   content="Information on the image formats of Rockbox Theming and how to optimise them best."/>
 <title> Rockbox Image Optimisation  • d00k.net</title></head>
-<body><header><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
+<body><div class="header"><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
 <li><a href="/design/">Design</a></li>
 <li><a href="/blog/">Blog</a></li>   
 <li><a href="/about/">About</a></li>
-</ul></div></nav></header>
-<main class="layout">
+</ul></div></nav></div>
+<div class="main layout">
 
 <div class="title"><h1 id="top">Rockbox Image Optimisation</h1><hr></div>
 <p>When producing Rockbox themes with large feature-sets, images can quickly become a bottleneck both in terms of filesize as well as graphical quality. There are many ways to address these issues, however in this guide I will cover the best practices I have discovered and incorporated into my toolbox.</p>
@@ -69,8 +69,8 @@ mogrify -ordered-dither o8x8,32,64,32 -compress None -type palette -format bmp -
 <nav><a class="prev navbut" href="/wiki/#rockbox-theming">← Back to  Wiki </a>
 
 </nav>
-</main>
-<footer>
+</div>
+<div class="footer">
 <div class="layout">
 <a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28"height="28"></a>
 <a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30"height="27"></a>
@@ -80,5 +80,5 @@ mogrify -ordered-dither o8x8,32,64,32 -compress None -type palette -format bmp -
 <div style="margin:20px 0 8px">Published: <strong>May 2023</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
 <img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64" width="553">
-</footer>
+</div>
 </body>
