--- a/wiki/rockbox_theming/introduction/index.html
+++ b/wiki/rockbox_theming/introduction/index.html
@@ -3,15 +3,15 @@
 
 
 <title> Introduction  • d00k.net</title></head>
-<body><header><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
+<body><div class="header"><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
 <li><a href="/design/">Design</a></li>
 <li><a href="/blog/">Blog</a></li>   
 <li><a href="/about/">About</a></li>
-</ul></div></nav></header>
-<main class="layout">
+</ul></div></nav></div>
+<div class="main layout">
 
 <div class="title"><h1 id="top">Introduction</h1><hr></div>
 <p>Since the mid-2000s, Rockbox has allowed users to modify the user-interface. Over time, this feature has evolved and matured into an intricate system of tags and markup. The theming system as it stands today provides the user with an incredible amount of freedom and control, with the possibility to do so much.</p>
@@ -50,8 +50,8 @@ This has meant that older, more complicated (and inefficient) ways of implementi
 <nav><a class="prev navbut" href="/wiki/rockbox_theming/">← Back to  Rockbox Theming for Beginners </a>
 
 </nav>
-</main>
-<footer>
+</div>
+<div class="footer">
 <div class="layout">
 <a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28"height="28"></a>
 <a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30"height="27"></a>
@@ -61,5 +61,5 @@ This has meant that older, more complicated (and inefficient) ways of implementi
 <div style="margin:20px 0 8px">Published: <strong>October 2023</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
 <img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64" width="553">
-</footer>
+</div>
 </body>
