small changes to css images to support internet explorer (i know)

--- a/wiki/ecovillage/index.html
+++ b/wiki/ecovillage/index.html
@@ -66,6 +66,6 @@ a large <a href="https://cloughjordancommunityfarm.ie/" target="_blank" rel="noo
 <hr>
 <div style="margin:20px 0 8px">Published: <strong>March 2022</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
-<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64" width="553">
+<img aria-hidden="true" style="max-width:none;width:521px" src="/img/assets/footer.svg" height="64" width="521">
 </div>
 </body>
