--- a/404.html
+++ b/404.html
@@ -25,6 +25,6 @@
 <hr>
 <div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
-<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64" width="553">
+<img aria-hidden="true" style="max-width:none;width:521px" src="/img/assets/footer.svg" height="64" width="521">
 </div>
 </body> 
