--- a/about/journal/2023-03-31/index.html
+++ b/about/journal/2023-03-31/index.html
@@ -34,6 +34,6 @@
 <hr>
 <div style="margin:20px 0 8px">Published: <strong>March 2023</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
-<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64" width="553">
+<img aria-hidden="true" style="max-width:none;width:521px" src="/img/assets/footer.svg" height="64" width="521">
 </div>
 </body>
