--- a/design/themify/index.html
+++ b/design/themify/index.html
@@ -47,7 +47,7 @@
 </ul></div>
 
 
-<iframe src="https://itch.io/embed/1968733?linkback=true" width="552" height="167" frameborder="0" style="margin-bottom:16px;width:100%"><a href="https://d00k.itch.io/themifywallpaperpack">Themify - Wallpaper Pack by Dook</a></iframe>
+<iframe src="https://itch.io/embed/1968733?linkback=true" width="552" height="167" frameborder="0" style="margin-bottom:16px"><a href="https://d00k.itch.io/themifywallpaperpack">Themify - Wallpaper Pack by Dook</a></iframe>
 
 
 <nav><a class="prev navbut" href="/design/">← Back to  Design Portfolio </a>
@@ -63,6 +63,6 @@
 <hr>
 <div style="margin:20px 0 8px">Published: <strong>March 2023</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
-<img aria-hidden="true" style="max-width:none" src="/img/assets/footer.svg" height="64" width="553">
+<img aria-hidden="true" style="max-width:none;width:521px" src="/img/assets/footer.svg" height="64" width="521">
 </div>
 </body>
