fix h2 underline in netsurf

--- a/wiki/rockbox_theming/index.html
+++ b/wiki/rockbox_theming/index.html
@@ -21,7 +21,7 @@
 
 
 
-<div class="clickdiv"><h3 id="1-introduction">1. Introduction</h3><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore disputandum putant.</div></a>
+<div class="clickdiv"><h3 id="1-introduction">1. Introduction</h3><p>A gentle introduction to the world of rockbox theming.</div></a>
 <a href="" class="clickbox box " >
 
 
