--- a/wiki/rockbox_advanced/rockbox_image_optimisation/index.html
+++ b/wiki/rockbox_advanced/rockbox_image_optimisation/index.html
@@ -4,7 +4,7 @@
 <meta property="og:description" 
   content="Information on the image formats of Rockbox Theming and how to optimise them best."/>
 <title> Rockbox Image Optimisation  • d00k.net</title></head>
-<body><div class="header"><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo_IEtest.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
+<body><div class="header"><nav><div style="width:45vw;height:auto;max-width:180px"><a class="logo" href="/" aria-label="Homepage"><img src="/img/assets/Logo.svg" aria-hidden="true" width="184px" height="172px"></a></div><div class="menu"><ul role="list">
 <li><a href="/photos/">Photos</a></li>
 <li style="margin-left:auto"><a href="/wiki/">Wiki</a></li></ul>  
 <ul role="list" style="border-left:1px solid #808080">
@@ -72,10 +72,10 @@ mogrify -ordered-dither o8x8,32,64,32 -compress None -type palette -format bmp -
 </div>
 <div class="footer">
 <div class="layout">
-<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc_IE.svg" loading="lazy" alt="copyright" width="28"height="28"></a>
+<a class="icon" href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank"><img src="/img/assets/cc.svg" loading="lazy" alt="copyright" width="28"height="28"></a>
 <a class="icon" href="https://webring.xxiivv.com/" target="_blank"><img src="/img/assets/webring.svg" loading="lazy" alt="webring" width="30"height="27"></a>
 <a class="icon" href="/index.xml" target="_blank"><img src="/img/assets/rss.svg" loading="lazy" alt="RSS Feed" width="28"height="28"></a>
-<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git_IE.svg" loading="lazy" alt="Git" width="25"height="28"></a>
+<a class="icon" href="https://github.com/D0-0K" target="_blank" alt="git"><img src="/img/assets/git.svg" loading="lazy" alt="Git" width="22"height="28"></a>
 <hr>
 <div style="margin:20px 0 8px">Published: <strong>May 2023</strong></div><div>d00k.net © 2023 &nbsp;-<a href="https://creativecommons.org/licenses/by-nc-sa/4.0/"> BY-NC-SA 4.0</a></div>
 </div>
